Closed Bug 308736 Opened 20 years ago Closed 17 years ago

Caret is invisible when entering an empty designmode field.

Categories

(Core :: DOM: Editor, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9.2a1

People

(Reporter: egonknapen, Assigned: peterv)

References

()

Details

(Whiteboard: midas)

Attachments

(2 files)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b4) Gecko/20050908 Firefox/1.4 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b4) Gecko/20050908 Firefox/1.4 When an designmode field is still empty when you enter by clicking the mouse in it, you don't see a cursor. The cursor will appear only after you start typing characters. Reproducible: Always Steps to Reproduce: 1. visit the site, 2. click 'view source' 3. delete everything 4. unclick 'view source' (remove check) 5. click with mouse in textfield Actual Results: You don't see a focus or an blinking cursor. Or any cursor what so ever... Expected Results: In a normal textfield or textarea, when you it gets the focus, you see a blinking cursor. Problem happens under Windows XP, but also under MacOSX (Tiger), with using Firefox 1.5 beta 1 or Camino 1.0a1.
WFM, Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b4) Gecko/20050908 Firefox/1.4 ID:2005090806 However, the cursor is very very small, making it hard to see, still a bug, but not the same as decribed.
No it's not visible. That other one is when there is text, and you move the cursor totally to the beginning, then I see a very small cursor. Both are bugs I think that should be finished!
See this as well with 20050916 branch build
Assignee: nobody → mozeditor
Component: General → Editor
Product: Firefox → Core
QA Contact: general
Version: unspecified → 1.0 Branch
Whiteboard: midas
Reproducible (no cursor) with SeaMonkey/20050904/1.1a, I see a very small cursor with SeaMonkey/20050907/1.1a.
Oops, now I also see the very small cursor with SeaMonkey/20050904/1.1a so my comment 4 is incorrect, sorry.
The DesignMode has been a big improvement in the 1.5beta2 over the 1.0.6 version of firefox, but this small or invisible cursor is really something that should get quickly fixed, to make it a perfect designmode....
Keywords: testcase
Version: 1.0 Branch → 1.8 Branch
Keywords: helpwanted
Status: UNCONFIRMED → NEW
Ever confirmed: true
Summary: cursor is invisible when enter an empty designmode field. → Caret is invisible when entering an empty designmode field.
Same on trunk/win xp --> trunk
Flags: blocking1.9a1?
Version: 1.8 Branch → Trunk
Flags: blocking1.9a1? → blocking1.9-
QA Contact: editor
Assignee: mozeditor → nobody
The cursor is also invisible when a text-area or design mode is used above a transparent layer (see bug 343240). Afaik it was fixed in 1.5 but is still not fixed in 2.0. When will this be fixed? (please?)
This now works for me [Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9a9pre) Gecko/2007102510 Minefield/3.0a9pre].
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → WORKSFORME
Under latest night build 3.0a9pre (1.Nov) it is visible. But it's very small... Same when in there is text, and you go to the last line, it sometimes is small too. Still same behaviour as in 2.0.0.8.
Resolution: WORKSFORME → INCOMPLETE
Reopening per comment 10.
Status: RESOLVED → REOPENED
Resolution: INCOMPLETE → ---
Oh I see, the problem is that when you delete everything in view source mode, there's *nothing* left in the iframe. When we draw the caret in an empty iframe, the caret is offset vertically, that's why we always add a <br> tag to an empty iframe. We need to either: 1. Fix the caret drawing/positioning code when it's drawn in an *empty* iframe document. 2. Add a <br> to the iframe when all its content is deleted. Taking bug.
Status: REOPENED → ASSIGNED
Assignee: nobody → chris
Status: ASSIGNED → NEW
Blocks: 424615
Blocks: 395965
Attached file Testcase
Assignee: chris → peterv
Status: NEW → ASSIGNED
Attached patch v1Splinter Review
Attachment #381763 - Flags: superreview?(roc)
Attachment #381763 - Flags: review?(roc)
Keywords: helpwanted, testcase
Target Milestone: --- → mozilla1.9.2
Attachment #381763 - Flags: superreview?(roc)
Attachment #381763 - Flags: superreview+
Attachment #381763 - Flags: review?(roc)
Attachment #381763 - Flags: review+
Status: ASSIGNED → RESOLVED
Closed: 18 years ago17 years ago
Flags: in-testsuite?
Resolution: --- → FIXED
Target Milestone: mozilla1.9.2 → mozilla1.9.2a1
Depends on: 503531
This caused bug 503531
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: