Fix for bug 308736 (Caret is invisible when entering an empty designmode field.). r/sr=roc.